# aicord

./: .dockerignore  .env.example  Dockerfile  README.md  bot.py  main.py  pyproject.toml  railway.json  run_bot.py  sweep.yaml
.github/workflows/: run_tests.yml  test.yml  test_workflow.yml
aicord/: __main__.py
aicord/core/ai/: summarize.py
aicord/discord/: bot.py  utils.py
aicord/discord/cogs/: __init__.py  summarize.py  summarize_test.py
aicord/utils/: string.py  string_test.py
cogs/: summarize.py
configs/: config.py
discord_module/: bot.py  utils.py
discord_module/cogs/: __init__.py  summarize.py
gpt_module/: main.py  prompts.py
gpt_module/misc/: settings.py
misc/: utils.py
tests/: test_example.py  test_example_test.py
tests/aicord/utils/: string_test.py
tests/core/ai/: test_summarize.py
tests/utils/: string_test.py
